envoy_config.yaml
---
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  secrets:
  - name: "self-signed"
    tls_certificate:
      certificate_chain:
        inline_string: |+
          -----BEGIN CERTIFICATE-----
          MIIDDDCCAnWgAwIBAgIJAPOCjrJP13nQMA0GCSqGSIb3DQEBCwUAMHYxCzAJBgNV
[...]
          NWw1EW8TEwlFyuvCrlWQcg==
          -----END CERTIFICATE-----
      private_key:
        inline_string: +
          -----BEGIN RSA PRIVATE KEY-----
          MIICXQIBAAKBgQDARNUJMFkWF0E6mbdz/nkydVC4TU2SgR95vhJhWpG6xKkCNoXk
[...]
          ZXbTTxnUZioQ2l/7IWa+K2O2NrWWT7b3KpCAob0bJsQz
          -----END RSA PRIVATE KEY-----
  clusters:
  - connect_timeout: 0.25s
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8082
    lb_policy: round_robin
    name: local_service_tls
    type: strict_dns
    tls_context:
      common_tls_context:
        tls_certificate_sds_secret_configs:
        - name: "SPKI"
          sds_config:
            api_config_source:
              api_type: GRPC
              grpc_services:
              - google_grpc:
                  stat_prefix: test
                  target_uri: unix:/tmp/uds_path
              refresh_delay: 60s
  - connect_timeout: 0.25s
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
    lb_policy: round_robin
    name: local_service_text
    type: strict_dns
#    tls_context:
#      common_tls_context:
#        tls_certificate_sds_secret_configs:
#        - name: "self-signed"
  - connect_timeout: 0.25s
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 10000
    lb_policy: round_robin
    name: open_cluster
    type: strict_dns
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    filter_chains:
      tls_context:
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: "SPKI"
            sds_config:
              api_config_source:
                api_type: GRPC
                grpc_services:
                - google_grpc:
                    stat_prefix: test
                    target_uri: unix:/tmp/uds_path
                refresh_delay: 60s
      filters:
      - config:
          codec_type: auto
          http_filters:
          - config: {}
            name: envoy.router
          route_config:
            name: local_route
            virtual_hosts:
            - domains:
              - "*"
              name: service
              routes:
              - match:
                  prefix: "/service/1"
                route:
                  cluster: local_service_tls
          stat_prefix: ingress_http
        name: envoy.http_connection_manager
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 8082
    filter_chains:
      tls_context:
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: "SPKI"
            sds_config:
              api_config_source:
                api_type: GRPC
                grpc_services:
                - google_grpc:
                    stat_prefix: test
                    target_uri: unix:/tmp/uds_path
                refresh_delay: 60s
      filters:
      - config:
          codec_type: auto
          http_filters:
          - config: {}
            name: envoy.router
          route_config:
            name: local_route
            virtual_hosts:
            - domains:
              - "*"
              name: service
              routes:
              - match:
                  prefix: "/service/1"
                route:
                  cluster: local_service_text
          stat_prefix: ingress_http
        name: envoy.http_connection_manager
